# flexible-c-objects

./: CMakeLists.txt  LICENSE  README.md
.devcontainer/: devcontainer.json
examples/: CMakeLists.txt  common.h  example_1.c  example_2.c
lib/: fco.c  fco.h
test/: CMakeLists.txt  common.h  test_FCO_Init_and_FCO_AllocMemory.c
